# service.command-handler

./: Dockerfile  README.md  pyproject.toml  start.py
commands/: __init__.py  base.py  commands.py
config/: __init__.py  config.py
consumer/: body.py
data/: __init__.py  annotated.py  instance.py  models.py
data/scripts/: __init__.py  peer.py  user.py
db/: __init__.py  connection.py  database.py  execute.py
db/preset/: __init__.py  preset.py
handler/: __init__.py  abc.py  handler.py
handler/commands/: __init__.py  abc.py  base.py  commands.py
producer/: custom.py
rules/: __init__.py  rules.py
toaster/broker/: connection.py
toaster/credentials/: __inti__.py  credentials.py
toaster/database/: __init__.py  connection.py  credentials.py  database.py  scripts.py
tools/keyboards/: action.py  button.py
